--- a/Adventure.WebAPI/Web.config
+++ b/Adventure.WebAPI/Web.config
@@ -12,7 +12,20 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Adventure.WebAPI-20160508082509.mdf;Initial Catalog=aspnet-Adventure.WebAPI-20160508082509;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="AdventureEntities" connectionString="data source=beonthewatch.database.windows.net;initial catalog=AdventureWorks;persist security info=True;user id=dba2016;password=Be0nthew@tch;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <!-- Fill in your consumer key and secret here to make the OAuth sample work. -->
+    <!-- Twitter sign-up: https://dev.twitter.com/ -->
+    <add key="consumerKey" value="t5mCJab3zDxpeYtBkEBidibEn" />
+    <add key="consumerSecret" value="uoRaFRjcxP3dS1st3InXfsMuuGgnSrl10i9VF2ypCYn5rt0Fxn" />
+    <add key="oauthToken" value="15029980-DW4cLi1Q1N3b3pVcjUYuzAReUqQTrYduixzHMX4AR" />
+    <add key="oauthTokenSecret" value="Q4b1Pth6Lae3QKdV2GXdtgPXhKvgynwosqzllE6nVxJG4" />
+    <add key="accessToken" value="15029980-DW4cLi1Q1N3b3pVcjUYuzAReUqQTrYduixzHMX4AR" />
+    <add key="accessTokenSecret" value="Q4b1Pth6Lae3QKdV2GXdtgPXhKvgynwosqzllE6nVxJG4" />
+    <!-- Twitter above access for MattDunnDC, below Lebowski -->
+    <add key="accessToken1" value="390330663-VvrxD4fCK9EddRXTwsxfFnZ2BvLPWF7trKKZiMOS" />
+    <add key="accessTokenSecret1" value="XjhmYN9GZXEe1pvr76AfCPxLzc04LsXsiVhL52ksE48z6" />
+    
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
@@ -71,7 +84,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
