--- a/Adventure.WebAPI/packages.config
+++ b/Adventure.WebAPI/packages.config
@@ -10,6 +10,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
+  <package id="linqtotwitter" version="4.1.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="1.2.3" targetFramework="net452" />
@@ -55,6 +56,11 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="Unity.WebAPI" version="5.2.3" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
